main.yml update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Otomatik Puanlama ve AI Hoca
 
-on: [pull_request] # Öğrenci Pull Request açınca çalışsın
+on: [push]
 
 permissions:
   contents: read
